--- a/gallery.html
+++ b/gallery.html
@@ -1,149 +1,289 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gallery - Keval Photography</title>
+  <title>Gallery - Keval's Photography</title>
   <link rel="icon" type="image/png" href="favicon.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
   <style>
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
-    body, html {
-      height: 100%;
-      font-family: 'Poppins', sans-serif;
-    }
-    .background {
-      background: url('images/background.jpg') no-repeat center center fixed;
-      background-size: cover;
+
+    body {
+      font-family: 'Playfair Display', serif;
+      background: url('images/background.jpg') no-repeat center center/cover;
       min-height: 100vh;
       position: relative;
+      color: #fff;
     }
+
     .overlay {
-      background-color: rgba(0, 0, 0, 0.6);
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
       width: 100%;
-      min-height: 100vh;
-      padding: 50px 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      color: white;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 0;
     }
-    h1 {
-      font-size: 3em;
-      margin-bottom: 40px;
+
+    .container {
+      position: relative;
+      z-index: 1;
+      padding: 50px 20px;
       text-align: center;
     }
+
+    h1 {
+      font-size: 3em;
+      margin-bottom: 30px;
+      text-shadow: 2px 2px 8px #000;
+    }
+
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
-      width: 100%;
       max-width: 1200px;
+      margin: 0 auto;
     }
-    .gallery img {
-      width: 100%;
+
+    .gallery-item {
+      position: relative;
+      overflow: hidden;
       border-radius: 10px;
+    }
+
+    .gallery-item img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      transition: transform 0.3s;
       cursor: pointer;
-      transition: transform 0.3s ease;
     }
-    .gallery img:hover {
-      transform: scale(1.03);
+
+    .gallery-item img:hover {
+      transform: scale(1.05);
     }
-    /* Lightbox */
+
+    .download-btn {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      background: rgba(0, 0, 0, 0.5);
+      color: #fff;
+      padding: 6px 10px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 0.9em;
+    }
+
     .lightbox {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.9);
       display: none;
-      align-items: center;
+      position: fixed;
+      z-index: 1000;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.9);
       justify-content: center;
-      z-index: 999;
+      align-items: center;
     }
+
     .lightbox img {
       max-width: 90%;
       max-height: 90%;
       border-radius: 10px;
     }
+
     .lightbox:target {
       display: flex;
     }
-    /* Back to Top */
-    .back-to-top {
+
+    .scroll-top {
       position: fixed;
-      bottom: 30px;
-      right: 30px;
-      background: #fff;
-      color: #000;
-      border: none;
-      padding: 10px 16px;
+      bottom: 20px;
+      right: 20px;
+      background: rgba(255, 255, 255, 0.2);
+      padding: 10px 15px;
       border-radius: 50%;
-      font-size: 20px;
-      cursor: pointer;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
-      transition: background 0.3s;
+      color: #fff;
+      text-decoration: none;
+      font-size: 1.5em;
+      backdrop-filter: blur(5px);
+      z-index: 1001;
     }
-    .back-to-top:hover {
-      background: #ddd;
-    }
-    @media (max-width: 768px) {
+
+    @media (max-width: 600px) {
       h1 {
         font-size: 2em;
       }
     }
   </style>
 </head>
+
 <body>
-  <div class="background">
-    <div class="overlay">
-      <h1>Photo Gallery</h1>
-      <div class="gallery">
-        <!-- 17 Images -->
-        <a href="#img1"><img src="images/1.jpg" alt="Image 1"></a>
-        <a href="#img2"><img src="images/2.jpg" alt="Image 2"></a>
-        <a href="#img3"><img src="images/3.jpg" alt="Image 3"></a>
-        <a href="#img4"><img src="images/4.jpg" alt="Image 4"></a>
-        <a href="#img5"><img src="images/5.jpg" alt="Image 5"></a>
-        <a href="#img6"><img src="images/6.jpg" alt="Image 6"></a>
-        <a href="#img7"><img src="images/7.jpg" alt="Image 7"></a>
-        <a href="#img8"><img src="images/8.jpg" alt="Image 8"></a>
-        <a href="#img9"><img src="images/9.jpg" alt="Image 9"></a>
-        <a href="#img10"><img src="images/10.jpg" alt="Image 10"></a>
-        <a href="#img11"><img src="images/11.jpg" alt="Image 11"></a>
-        <a href="#img12"><img src="images/12.jpg" alt="Image 12"></a>
-        <a href="#img13"><img src="images/13.jpg" alt="Image 13"></a>
-        <a href="#img14"><img src="images/14.jpg" alt="Image 14"></a>
-        <a href="#img15"><img src="images/15.jpg" alt="Image 15"></a>
-        <a href="#img16"><img src="images/16.jpg" alt="Image 16"></a>
-        <a href="#img17"><img src="images/17.jpg" alt="Image 17"></a>
+  <div class="overlay"></div>
+  <div class="container">
+    <h1>Photo Gallery</h1>
+    <div class="gallery">
+      <!-- Image 1 -->
+      <div class="gallery-item">
+        <a href="#lightbox1"><img src="images/1.jpg" alt="Photo 1"></a>
+        <a class="download-btn" href="images/1.jpg" download>Download</a>
       </div>
-    </div>
-  </div>
+      <div id="lightbox1" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/1.jpg" alt="Photo 1">
+      </div>
 
-  <!-- Lightboxes -->
-  <div id="img1" class="lightbox"><a href="#"><img src="images/1.jpg" alt=""></a></div>
-  <div id="img2" class="lightbox"><a href="#"><img src="images/2.jpg" alt=""></a></div>
-  <div id="img3" class="lightbox"><a href="#"><img src="images/3.jpg" alt=""></a></div>
-  <div id="img4" class="lightbox"><a href="#"><img src="images/4.jpg" alt=""></a></div>
-  <div id="img5" class="lightbox"><a href="#"><img src="images/5.jpg" alt=""></a></div>
-  <div id="img6" class="lightbox"><a href="#"><img src="images/6.jpg" alt=""></a></div>
-  <div id="img7" class="lightbox"><a href="#"><img src="images/7.jpg" alt=""></a></div>
-  <div id="img8" class="lightbox"><a href="#"><img src="images/8.jpg" alt=""></a></div>
-  <div id="img9" class="lightbox"><a href="#"><img src="images/9.jpg" alt=""></a></div>
-  <div id="img10" class="lightbox"><a href="#"><img src="images/10.jpg" alt=""></a></div>
-  <div id="img11" class="lightbox"><a href="#"><img src="images/11.jpg" alt=""></a></div>
-  <div id="img12" class="lightbox"><a href="#"><img src="images/12.jpg" alt=""></a></div>
-  <div id="img13" class="lightbox"><a href="#"><img src="images/13.jpg" alt=""></a></div>
-  <div id="img14" class="lightbox"><a href="#"><img src="images/14.jpg" alt=""></a></div>
-  <div id="img15" class="lightbox"><a href="#"><img src="images/15.jpg" alt=""></a></div>
-  <div id="img16" class="lightbox"><a href="#"><img src="images/16.jpg" alt=""></a></div>
-  <div id="img17" class="lightbox"><a href="#"><img src="images/17.jpg" alt=""></a></div>
+      <!-- Image 2 -->
+      <div class="gallery-item">
+        <a href="#lightbox2"><img src="images/2.jpg" alt="Photo 2"></a>
+        <a class="download-btn" href="images/2.jpg" download>Download</a>
+      </div>
+      <div id="lightbox2" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/2.jpg" alt="Photo 2">
+      </div>
 
-  <!-- Back to Top Button -->
-  <button class="back-to-top" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">↑</button>
-</body>
-</html>
+      <!-- Image 3 -->
+      <div class="gallery-item">
+        <a href="#lightbox3"><img src="images/3.jpg" alt="Photo 3"></a>
+        <a class="download-btn" href="images/3.jpg" download>Download</a>
+      </div>
+      <div id="lightbox3" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/3.jpg" alt="Photo 3">
+      </div>
+
+      <!-- Image 4 -->
+      <div class="gallery-item">
+        <a href="#lightbox4"><img src="images/4.jpg" alt="Photo 4"></a>
+        <a class="download-btn" href="images/4.jpg" download>Download</a>
+      </div>
+      <div id="lightbox4" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/4.jpg" alt="Photo 4">
+      </div>
+
+      <!-- Image 5 -->
+      <div class="gallery-item">
+        <a href="#lightbox5"><img src="images/5.jpg" alt="Photo 5"></a>
+        <a class="download-btn" href="images/5.jpg" download>Download</a>
+      </div>
+      <div id="lightbox5" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/5.jpg" alt="Photo 5">
+      </div>
+
+      <!-- Image 6 -->
+      <div class="gallery-item">
+        <a href="#lightbox6"><img src="images/6.jpg" alt="Photo 6"></a>
+        <a class="download-btn" href="images/6.jpg" download>Download</a>
+      </div>
+      <div id="lightbox6" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/6.jpg" alt="Photo 6">
+      </div>
+
+      <!-- Image 7 -->
+      <div class="gallery-item">
+        <a href="#lightbox7"><img src="images/7.jpg" alt="Photo 7"></a>
+        <a class="download-btn" href="images/7.jpg" download>Download</a>
+      </div>
+      <div id="lightbox7" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/7.jpg" alt="Photo 7">
+      </div>
+
+      <!-- Image 8 -->
+      <div class="gallery-item">
+        <a href="#lightbox8"><img src="images/8.jpg" alt="Photo 8"></a>
+        <a class="download-btn" href="images/8.jpg" download>Download</a>
+      </div>
+      <div id="lightbox8" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/8.jpg" alt="Photo 8">
+      </div>
+
+      <!-- Image 9 -->
+      <div class="gallery-item">
+        <a href="#lightbox9"><img src="images/9.jpg" alt="Photo 9"></a>
+        <a class="download-btn" href="images/9.jpg" download>Download</a>
+      </div>
+      <div id="lightbox9" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/9.jpg" alt="Photo 9">
+      </div>
+
+      <!-- Image 10 -->
+      <div class="gallery-item">
+        <a href="#lightbox10"><img src="images/10.jpg" alt="Photo 10"></a>
+        <a class="download-btn" href="images/10.jpg" download>Download</a>
+      </div>
+      <div id="lightbox10" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/10.jpg" alt="Photo 10">
+      </div>
+
+      <!-- Image 11 -->
+      <div class="gallery-item">
+        <a href="#lightbox11"><img src="images/11.jpg" alt="Photo 11"></a>
+        <a class="download-btn" href="images/11.jpg" download>Download</a>
+      </div>
+      <div id="lightbox11" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/11.jpg" alt="Photo 11">
+      </div>
+
+      <!-- Image 12 -->
+      <div class="gallery-item">
+        <a href="#lightbox12"><img src="images/12.jpg" alt="Photo 12"></a>
+        <a class="download-btn" href="images/12.jpg" download>Download</a>
+      </div>
+      <div id="lightbox12" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/12.jpg" alt="Photo 12">
+      </div>
+
+      <!-- Image 13 -->
+      <div class="gallery-item">
+        <a href="#lightbox13"><img src="images/13.jpg" alt="Photo 13"></a>
+        <a class="download-btn" href="images/13.jpg" download>Download</a>
+      </div>
+      <div id="lightbox13" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/13.jpg" alt="Photo 13">
+      </div>
+
+      <!-- Image 14 -->
+      <div class="gallery-item">
+        <a href="#lightbox14"><img src="images/14.jpg" alt="Photo 14"></a>
+        <a class="download-btn" href="images/14.jpg" download>Download</a>
+      </div>
+      <div id="lightbox14" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/14.jpg" alt="Photo 14">
+      </div>
+
+      <!-- Image 15 -->
+      <div class="gallery-item">
+        <a href="#lightbox15"><img src="images/15.jpg" alt="Photo 15"></a>
+        <a class="download-btn" href="images/15.jpg" download>Download</a>
+      </div>
+      <div id="lightbox15" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/15.jpg" alt="Photo 15">
+      </div>
+
+      <!-- Image 16 -->
+      <div class="gallery-item">
+        <a href="#lightbox16"><img src="images/16.jpg" alt="Photo 16"></a>
+        <a class="download-btn" href="images/16.jpg" download>Download</a>
+      </div>
+      <div id="lightbox16" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/16.jpg" alt="Photo 16">
+      </div>
+
+      <!-- Image 17 -->
+      <div class="gallery-item">
+        <a href="#lightbox17"><img src="images/17.jpg" alt="Photo 17"></a>
+        <a class="download-btn" href="images/17.jpg" download>Download</a>
+      </div>
+      <div id="lightbox17" class="lightbox" onclick="this.style.display='none'">
+        <img src="images/17.jpg" alt="Photo 17">
+      </div>
+
+      <!-- End gallery items -->
