--- a/gallery.html
+++ b/gallery.html
@@ -1,289 +1,277 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gallery - Keval's Photography</title>
+  <title>Gallery - Keval Photography</title>
   <link rel="icon" type="image/png" href="favicon.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
-      font-family: 'Playfair Display', serif;
-      background: url('images/background.jpg') no-repeat center center/cover;
-      min-height: 100vh;
-      position: relative;
-      color: #fff;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: url('images/background.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
     }
-
     .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.6);
-      z-index: 0;
+      background-color: rgba(0, 0, 0, 0.75);
+      position: absolute;
+      inset: 0;
+      z-index: -1;
     }
-
-    .container {
-      position: relative;
-      z-index: 1;
-      padding: 50px 20px;
+    header {
       text-align: center;
+      padding: 2rem;
+      position: relative;
     }
-
     h1 {
-      font-size: 3em;
-      margin-bottom: 30px;
-      text-shadow: 2px 2px 8px #000;
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
     }
-
+    .btn-bar {
+      margin-top: 1rem;
+    }
+    .btn-bar a {
+      background: #222;
+      color: #fff;
+      text-decoration: none;
+      padding: 0.6rem 1rem;
+      margin: 0 0.5rem;
+      border-radius: 5px;
+      transition: 0.3s;
+    }
+    .btn-bar a:hover {
+      background: #555;
+    }
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      max-width: 1200px;
-      margin: 0 auto;
+      gap: 15px;
+      padding: 2rem;
+      position: relative;
+      z-index: 1;
     }
-
     .gallery-item {
       position: relative;
       overflow: hidden;
       border-radius: 10px;
     }
-
     .gallery-item img {
       width: 100%;
       height: auto;
+      display: block;
+      border: 3px solid white;
       border-radius: 10px;
-      transition: transform 0.3s;
       cursor: pointer;
     }
-
-    .gallery-item img:hover {
-      transform: scale(1.05);
-    }
-
     .download-btn {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      background: rgba(0, 0, 0, 0.5);
-      color: #fff;
-      padding: 6px 10px;
-      border-radius: 5px;
+      display: block;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
       text-decoration: none;
-      font-size: 0.9em;
+      padding: 0.4rem;
+      margin-top: 5px;
+      border-radius: 5px;
+      transition: 0.3s;
     }
-
+    .download-btn:hover {
+      background: #333;
+    }
     .lightbox {
       display: none;
       position: fixed;
-      z-index: 1000;
-      top: 0;
+      z-index: 10;
+      padding-top: 5%;
       left: 0;
+      top: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.9);
-      justify-content: center;
-      align-items: center;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.9);
+      text-align: center;
     }
-
     .lightbox img {
       max-width: 90%;
-      max-height: 90%;
+      max-height: 80vh;
       border-radius: 10px;
+      box-shadow: 0 0 20px black;
     }
-
-    .lightbox:target {
-      display: flex;
-    }
-
-    .scroll-top {
+    #backToTop {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background: rgba(255, 255, 255, 0.2);
+      background-color: rgba(0,0,0,0.7);
+      color: white;
       padding: 10px 15px;
+      border: none;
       border-radius: 50%;
-      color: #fff;
-      text-decoration: none;
-      font-size: 1.5em;
-      backdrop-filter: blur(5px);
-      z-index: 1001;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 2em;
-      }
+      font-size: 18px;
+      cursor: pointer;
+      display: none;
+      z-index: 999;
     }
   </style>
 </head>
-
 <body>
   <div class="overlay"></div>
-  <div class="container">
-    <h1>Photo Gallery</h1>
-    <div class="gallery">
-      <!-- Image 1 -->
-      <div class="gallery-item">
-        <a href="#lightbox1"><img src="images/1.jpg" alt="Photo 1"></a>
-        <a class="download-btn" href="images/1.jpg" download>Download</a>
-      </div>
-      <div id="lightbox1" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/1.jpg" alt="Photo 1">
-      </div>
 
-      <!-- Image 2 -->
-      <div class="gallery-item">
-        <a href="#lightbox2"><img src="images/2.jpg" alt="Photo 2"></a>
-        <a class="download-btn" href="images/2.jpg" download>Download</a>
-      </div>
-      <div id="lightbox2" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/2.jpg" alt="Photo 2">
-      </div>
+  <header>
+    <h1>My Photography Gallery</h1>
+    <div class="btn-bar">
+      <a href="index.html">Home</a>
+      <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Follow on Instagram</a>
+    </div>
+  </header>
 
-      <!-- Image 3 -->
-      <div class="gallery-item">
-        <a href="#lightbox3"><img src="images/3.jpg" alt="Photo 3"></a>
-        <a class="download-btn" href="images/3.jpg" download>Download</a>
-      </div>
-      <div id="lightbox3" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/3.jpg" alt="Photo 3">
-      </div>
+  <div class="gallery">
+    !<div class="gallery-item">
+  <a href="#lightbox1"><img src="images/1.jpg" alt="Photo 1"></a>
+  <a class="download-btn" href="images/1.jpg" download>Download</a>
+</div>
+<div id="lightbox1" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/1.jpg" alt="Photo 1">
+</div>
 
-      <!-- Image 4 -->
-      <div class="gallery-item">
-        <a href="#lightbox4"><img src="images/4.jpg" alt="Photo 4"></a>
-        <a class="download-btn" href="images/4.jpg" download>Download</a>
-      </div>
-      <div id="lightbox4" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/4.jpg" alt="Photo 4">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox2"><img src="images/2.jpg" alt="Photo 2"></a>
+  <a class="download-btn" href="images/2.jpg" download>Download</a>
+</div>
+<div id="lightbox2" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/2.jpg" alt="Photo 2">
+</div>
 
-      <!-- Image 5 -->
-      <div class="gallery-item">
-        <a href="#lightbox5"><img src="images/5.jpg" alt="Photo 5"></a>
-        <a class="download-btn" href="images/5.jpg" download>Download</a>
-      </div>
-      <div id="lightbox5" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/5.jpg" alt="Photo 5">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox3"><img src="images/3.jpg" alt="Photo 3"></a>
+  <a class="download-btn" href="images/3.jpg" download>Download</a>
+</div>
+<div id="lightbox3" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/3.jpg" alt="Photo 3">
+</div>
 
-      <!-- Image 6 -->
-      <div class="gallery-item">
-        <a href="#lightbox6"><img src="images/6.jpg" alt="Photo 6"></a>
-        <a class="download-btn" href="images/6.jpg" download>Download</a>
-      </div>
-      <div id="lightbox6" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/6.jpg" alt="Photo 6">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox4"><img src="images/4.jpg" alt="Photo 4"></a>
+  <a class="download-btn" href="images/4.jpg" download>Download</a>
+</div>
+<div id="lightbox4" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/4.jpg" alt="Photo 4">
+</div>
 
-      <!-- Image 7 -->
-      <div class="gallery-item">
-        <a href="#lightbox7"><img src="images/7.jpg" alt="Photo 7"></a>
-        <a class="download-btn" href="images/7.jpg" download>Download</a>
-      </div>
-      <div id="lightbox7" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/7.jpg" alt="Photo 7">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox5"><img src="images/5.jpg" alt="Photo 5"></a>
+  <a class="download-btn" href="images/5.jpg" download>Download</a>
+</div>
+<div id="lightbox5" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/5.jpg" alt="Photo 5">
+</div>
 
-      <!-- Image 8 -->
-      <div class="gallery-item">
-        <a href="#lightbox8"><img src="images/8.jpg" alt="Photo 8"></a>
-        <a class="download-btn" href="images/8.jpg" download>Download</a>
-      </div>
-      <div id="lightbox8" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/8.jpg" alt="Photo 8">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox6"><img src="images/6.jpg" alt="Photo 6"></a>
+  <a class="download-btn" href="images/6.jpg" download>Download</a>
+</div>
+<div id="lightbox6" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/6.jpg" alt="Photo 6">
+</div>
 
-      <!-- Image 9 -->
-      <div class="gallery-item">
-        <a href="#lightbox9"><img src="images/9.jpg" alt="Photo 9"></a>
-        <a class="download-btn" href="images/9.jpg" download>Download</a>
-      </div>
-      <div id="lightbox9" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/9.jpg" alt="Photo 9">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox7"><img src="images/7.jpg" alt="Photo 7"></a>
+  <a class="download-btn" href="images/7.jpg" download>Download</a>
+</div>
+<div id="lightbox7" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/7.jpg" alt="Photo 7">
+</div>
 
-      <!-- Image 10 -->
-      <div class="gallery-item">
-        <a href="#lightbox10"><img src="images/10.jpg" alt="Photo 10"></a>
-        <a class="download-btn" href="images/10.jpg" download>Download</a>
-      </div>
-      <div id="lightbox10" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/10.jpg" alt="Photo 10">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox8"><img src="images/8.jpg" alt="Photo 8"></a>
+  <a class="download-btn" href="images/8.jpg" download>Download</a>
+</div>
+<div id="lightbox8" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/8.jpg" alt="Photo 8">
+</div>
 
-      <!-- Image 11 -->
-      <div class="gallery-item">
-        <a href="#lightbox11"><img src="images/11.jpg" alt="Photo 11"></a>
-        <a class="download-btn" href="images/11.jpg" download>Download</a>
-      </div>
-      <div id="lightbox11" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/11.jpg" alt="Photo 11">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox9"><img src="images/9.jpg" alt="Photo 9"></a>
+  <a class="download-btn" href="images/9.jpg" download>Download</a>
+</div>
+<div id="lightbox9" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/9.jpg" alt="Photo 9">
+</div>
 
-      <!-- Image 12 -->
-      <div class="gallery-item">
-        <a href="#lightbox12"><img src="images/12.jpg" alt="Photo 12"></a>
-        <a class="download-btn" href="images/12.jpg" download>Download</a>
-      </div>
-      <div id="lightbox12" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/12.jpg" alt="Photo 12">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox10"><img src="images/10.jpg" alt="Photo 10"></a>
+  <a class="download-btn" href="images/10.jpg" download>Download</a>
+</div>
+<div id="lightbox10" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/10.jpg" alt="Photo 10">
+</div>
 
-      <!-- Image 13 -->
-      <div class="gallery-item">
-        <a href="#lightbox13"><img src="images/13.jpg" alt="Photo 13"></a>
-        <a class="download-btn" href="images/13.jpg" download>Download</a>
-      </div>
-      <div id="lightbox13" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/13.jpg" alt="Photo 13">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox11"><img src="images/11.jpg" alt="Photo 11"></a>
+  <a class="download-btn" href="images/11.jpg" download>Download</a>
+</div>
+<div id="lightbox11" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/11.jpg" alt="Photo 11">
+</div>
 
-      <!-- Image 14 -->
-      <div class="gallery-item">
-        <a href="#lightbox14"><img src="images/14.jpg" alt="Photo 14"></a>
-        <a class="download-btn" href="images/14.jpg" download>Download</a>
-      </div>
-      <div id="lightbox14" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/14.jpg" alt="Photo 14">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox12"><img src="images/12.jpg" alt="Photo 12"></a>
+  <a class="download-btn" href="images/12.jpg" download>Download</a>
+</div>
+<div id="lightbox12" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/12.jpg" alt="Photo 12">
+</div>
 
-      <!-- Image 15 -->
-      <div class="gallery-item">
-        <a href="#lightbox15"><img src="images/15.jpg" alt="Photo 15"></a>
-        <a class="download-btn" href="images/15.jpg" download>Download</a>
-      </div>
-      <div id="lightbox15" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/15.jpg" alt="Photo 15">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox13"><img src="images/13.jpg" alt="Photo 13"></a>
+  <a class="download-btn" href="images/13.jpg" download>Download</a>
+</div>
+<div id="lightbox13" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/13.jpg" alt="Photo 13">
+</div>
 
-      <!-- Image 16 -->
-      <div class="gallery-item">
-        <a href="#lightbox16"><img src="images/16.jpg" alt="Photo 16"></a>
-        <a class="download-btn" href="images/16.jpg" download>Download</a>
-      </div>
-      <div id="lightbox16" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/16.jpg" alt="Photo 16">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox14"><img src="images/14.jpg" alt="Photo 14"></a>
+  <a class="download-btn" href="images/14.jpg" download>Download</a>
+</div>
+<div id="lightbox14" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/14.jpg" alt="Photo 14">
+</div>
 
-      <!-- Image 17 -->
-      <div class="gallery-item">
-        <a href="#lightbox17"><img src="images/17.jpg" alt="Photo 17"></a>
-        <a class="download-btn" href="images/17.jpg" download>Download</a>
-      </div>
-      <div id="lightbox17" class="lightbox" onclick="this.style.display='none'">
-        <img src="images/17.jpg" alt="Photo 17">
-      </div>
+<div class="gallery-item">
+  <a href="#lightbox15"><img src="images/15.jpg" alt="Photo 15"></a>
+  <a class="download-btn" href="images/15.jpg" download>Download</a>
+</div>
+<div id="lightbox15" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/15.jpg" alt="Photo 15">
+</div>
 
-      <!-- End gallery items -->
+<div class="gallery-item">
+  <a href="#lightbox16"><img src="images/16.jpg" alt="Photo 16"></a>
+  <a class="download-btn" href="images/16.jpg" download>Download</a>
+</div>
+<div id="lightbox16" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/16.jpg" alt="Photo 16">
+</div>
+
+<div class="gallery-item">
+  <a href="#lightbox17"><img src="images/17.jpg" alt="Photo 17"></a>
+  <a class="download-btn" href="images/17.jpg" download>Download</a>
+</div>
+<div id="lightbox17" class="lightbox" onclick="this.style.display='none'">
+  <img src="images/17.jpg" alt="Photo 17">
+</div>
+  </div>
+
+  <button onclick="scrollToTop()" id="backToTop" title="Go to top">↑</button>
+
+  <script>
+    window.onscroll = () => {
+      const btn = document.getElementById("backToTop");
+      btn.style.display = window.scrollY > 100 ? "block" : "none";
+    };
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    }
+  </script>
+</body>
+</html>
